move to data json folder

--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
 
 <script>
 const QCM_FILES = [
-  'gestion_entreprise_qcm.json',
-  'securite_qcm.json',
-  't3p_prevention_discrimination_qcm.json',
-  'francais_qcm.json',
-  'anglais_qcm.json',
-  'developpement_commercial_qcm.json',
-  'reglementation_qcm.json'
+  'data/gestion_entreprise_qcm.json',
+  'data/securite_qcm.json',
+  'data/t3p_prevention_discrimination_qcm.json',
+  'data/francais_qcm.json',
+  'data/anglais_qcm.json',
+  'data/developpement_commercial_qcm.json',
+  'data/reglementation_qcm.json'
 ];
 
 const state = { bank: [], currentCat:null, questions:[], answers:new Map(), idx:0 };
