--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 <div class="container">
   <header class="header"><h1>QCM & QRC — Préparation Examen VTC</h1></header>
   <main class="main-content">
-    <h2 class="section-title">QCM</h2>
+    <h2 class="section-title">QCM: Question a Choix Multiple</h2>
     <section id="categoriesQCM" class="categories-grid"></section>
-    <h2 class="section-title">QRC</h2>
+    <h2 class="section-title">QRC: Question a Reponse Courte</h2>
     <section id="categoriesQRC" class="categories-grid"></section>
 
     <section id="exam" class="hidden">
