IMAGE OK IN LOAD QUESTION

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <section id="exam" class="hidden">
         <div class="question-card">
           <div class="question-number" id="qNumber"></div>
+          <div id="qImage"></div>
           <div class="question-text" id="qText"></div>
           <div class="options" id="qOptions"></div>
           <div id="qrcInput" class="hidden">
