categorie exclaté en serie

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       <h2 class="section-title">QRC</h2>
       <section id="categoriesQRC" class="categories-grid"></section>
 
+      <section id="seriesQCM" class="categories-grid hidden"></section>
+      
       <section id="exam" class="hidden">
         <div class="question-card">
           <div class="question-number" id="qNumber"></div>
