ajoute de mode examen fix de navigation

--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
       <h1>QCM & QRC — Préparation Examen VTC</h1>
     </header>
     <main class="main-content">
-      <h2 class="section-title">QCM</h2>
+      <h2 id="titleQCM">QCM</h2>
       <section id="categoriesQCM" class="categories-grid"></section>
-
-      <h2 class="section-title">QRC</h2>
-      <section id="categoriesQRC" class="categories-grid"></section>
-
       <section id="seriesQCM" class="categories-grid hidden"></section>
+
+      <h2 id="titleQRC">QRC</h2>
+      <section id="categoriesQRC" class="categories-grid"></section>
       
+      <h2 id="titleExams">Mode Examen</h2>
+      <section id="examens" class="categories-grid"></section>
+
       <section id="exam" class="hidden">
         <div class="question-card">
           <div class="question-number" id="qNumber"></div>
