Liste des séries btn

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <div id="review"></div>
         <div class="results-buttons">
           <button id="replayBtn" class="btn btn-primary">Rejouer la catégorie</button>
+          <button id="seriesBtn" class="btn btn-info">Liste des séries</button>
           <button id="homeBtn" class="btn btn-secondary">Accueil</button>
         </div>
       </section>
